--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -2,3 +2,7 @@ NODE_ENV = development
 PORT = 5001
 
 MONGO_URI = mongodb+srv://root:hansmongodb@cluster0.wnm9yb4.mongodb.net/to-do
+
+DB_SRC_URL = "mongodb+srv://movie-application-user:Db2oCqbS0fiewy7h@cluster0.ecks9tp.mongodb.net/sample_mflix";
+
+DB_TARGET_URL = "mongodb+srv://movie-application-user:Db2oCqbS0fiewy7h@cluster0.ecks9tp.mongodb.net/cinema";
