--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,8 +1,6 @@
 NODE_ENV = development
-PORT = 5001
+PORT = 3000
 
-MONGO_URI = mongodb+srv://root:hansmongodb@cluster0.wnm9yb4.mongodb.net/to-do
+DB_MFLIX_URL = mongodb+srv://movie-application-user:Db2oCqbS0fiewy7h@cluster0.ecks9tp.mongodb.net/sample_mflix;
 
-DB_SRC_URL = "mongodb+srv://movie-application-user:Db2oCqbS0fiewy7h@cluster0.ecks9tp.mongodb.net/sample_mflix";
-
-DB_TARGET_URL = "mongodb+srv://movie-application-user:Db2oCqbS0fiewy7h@cluster0.ecks9tp.mongodb.net/cinema";
+DB_CINEMA_URL = mongodb+srv://movie-application-user:Db2oCqbS0fiewy7h@cluster0.ecks9tp.mongodb.net/cinema;
